# agent-asyst

./: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  Settings.tsx  fonts.css  store.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  requirements.txt  tauri.conf.json  window_detector.py
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AIChat.tsx  AutomationView.tsx
src/services/: gemini.ts
src/ui/: SecureInput.tsx  Select.tsx  Toggle.tsx  background-gradient.tsx  canvas-reveal-effect.tsx  card-spotlight.tsx
