[package]
name = "Leo_AI"
version = "0.1.0"
description = "A floating assistive touch app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [
    "macos-private-api",
    "tray-icon"
] }
cocoa = "0.25.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
