[package]
name = "Leo_AI"
version = "0.1.0"
description = "A floating assistive touch app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
cocoa = "0.26.0"
objc = "0.2.7"
objc2 = "0.6.1"
core-graphics = "0.24.0"
core-foundation = "0.10.0"
block = "0.1.6"
which = "4.4"
once_cell = "1.19"
parking_lot = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.0.0-beta"


